<resources>
    <string name="app_name">视鑫血压仪</string>
    <string name="company">视鑫</string>
    <string name="product">上臂式电子血压仪</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login_err1">请填写完整信息后登录</string>
    <string name="join_us">加入我们</string>
    <string name="phone_no">手机号码</string>
    <string name="validate_no">验证码</string>
    <string name="obtain_validate">获取验证码</string>
    <string name="obtain_validate_again">%s秒后重新获取</string>
    <string name="found_pwd">找回密码</string>
    <string name="pwd_hint">请输入6-20位密码</string>
    <string name="validate_hint">请输入验证码</string>
    <string name="phone_hint">请输入手机号码</string>
    <string name="newpwd_hint">请输入8-20位新密码</string>
    <string name="change">修改</string>
    <string name="SBP">收缩压</string>
    <string name="DBP">舒张压</string>
    <string name="heart_rate">心率</string>
    <string name="tab_measure">测血压</string>
    <string name="tab_record">测量记录</string>
    <string name="tab_setting">设置</string>
    <string name="dw">(mmHg)</string>
    <string name="ht_dw">(bmp)</string>
    <string name="start_measure">开始测量</string>
    <string name="stop_measure">停止测量</string>
    <string name="measure_note">温馨提示：测量前请详细阅读说明书</string>
    <string name="none_bluetooth">本机未找到蓝牙设备</string>
    <string name="bluetooth_open">蓝牙已经开启</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="waiting">请稍后</string>
    <string name="pass">跳过</string>
    <string name="pls_select_device">请选择设备</string>
    <string name="add_memeber">添加家庭成员</string>
    <string name="input_member_name">请输入姓名</string>
    <string name="input_member_age">请输入年龄</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="guide_member_note">请添加一个家人</string>
    <string name="guide_scan_device">搜索设备</string>
    <string name="unknown_device">未识别的蓝牙设备</string>
    <string name="exit">退出</string>
    <string name="let_goto">直接进入</string>
    <string name="scan_tip1">正在搜索血压计</string>
    <string name="scan_tip2">请打开血压计以确保蓝牙指示灯处于闪烁状态</string>
    <string name="scan_tip3">正在连接设备</string>
    <string name="scan_tip_err">搜索血压计失败，请重启后再试</string>
    <string name="search">搜索</string>
    <string name="scan_again">重新搜索</string>
    <string name="next_time">以后再说</string>
    <string name="connecting">正在连接</string>
    <string name="measuring">%s (mmHg)</string>
    <string name="scan_err">搜索设备失败，请重启设备后再试</string>
    <string name="dev_disconnect">设备未连接，是否重新搜索设备？</string>
    <string name="scanning_again">正在搜索设备</string>
    <string name="disconnection">设备已断开连接</string>
    <string name="device_connect_failed">设备连接失败</string>

    <string name="day">今天</string>
    <string name="week">近一周</string>
    <string name="month">近一月</string>
    <string name="year">近一年</string>
    <string name="sbp_dbp">%1$s / %2$s</string>

    <string name="family_member">家庭成员</string>
    <string name="my_device">我的设备</string>
    <string name="about">关于</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="age_s">年龄：%s</string>

    <string name="device_name">设备名称：</string>
    <string name="device_address">设备地址：</string>
    <string name="connect_status">连接状态：</string>
    <string name="device_battery">电池电量：</string>
    <string name="connected">已连接</string>
    <string name="disconnect">未连接</string>

    <string name="level_0">无效</string>
    <string name="level_1">偏低</string>
    <string name="level_2">理想</string>
    <string name="level_3">正常</string>
    <string name="level_4">轻度</string>
    <string name="level_5">中度</string>
    <string name="level_6">重度</string>

    <string name="exit_confirm">确定要退出吗？</string>

    <string name="member_info">家人信息</string>
    <string name="new_member">添加一个家人</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
</resources>
