<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color"
    android:orientation="vertical">

    <FrameLayout
        style="@style/title_style">

        <TextView
            style="@style/title_text_style"
            android:text="@string/tab_setting"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:showDividers="middle"
        android:divider="@drawable/dr_divider">

        <TextView
            android:id="@+id/item_family_member"
            style="@style/setting_item_text_style"
            android:drawableLeft="@mipmap/ic_family_member"
            android:text="@string/family_member" />

        <TextView
            android:id="@+id/item_my_device"
            style="@style/setting_item_text_style"
            android:drawableLeft="@mipmap/ic_bluetooth_device"
            android:text="@string/my_device" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_transparent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/item_about"
            style="@style/setting_item_text_style"
            android:drawableLeft="@mipmap/ic_family_member"
            android:text="@string/about" />
    </LinearLayout>
</LinearLayout>