<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color">

    <TextView
        android:id="@+id/guide_member_title"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="@string/add_memeber"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/title_text_size" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/guide_member_title"
        android:background="#316189"
        android:paddingLeft="16dp">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/member_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:background="#00000000"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF" />

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/member_age"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:background="#00000000"
                android:maxLength="20"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:textSize="16sp" />

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size" />

            <RadioGroup
                android:id="@+id/sex_group"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:checkedButton="@+id/select_man"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/select_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/dr_white_radiobutton"
                    android:text="@string/man"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_size" />

                <RadioButton
                    android:id="@+id/select_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:button="@drawable/dr_white_radiobutton"
                    android:text="@string/woman"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_size" />

            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/guide_set_member_next"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />
</RelativeLayout>