<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@color/theme_color">

        <ImageButton
            android:id="@+id/member_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@mipmap/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/family_member"
            android:textColor="#ffffff"
            android:textSize="@dimen/title_text_size" />

        <Button
            android:id="@+id/member_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/add_new_member"
        style="@style/setting_item_text_style"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/ic_add"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:text="@string/new_member" />

    <ListView
        android:id="@+id/family_member_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />
</LinearLayout>